Fixed: imporved physics

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 27.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -22,6 +22,34 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/piso.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/cubo_prueba.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 67,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 50,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
