--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -43,9 +43,9 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://car.gd"]
-selected_script="res://car.gd"
-open_help=["Node"]
+open_scripts=["res://car.gd", "res://Scenes/cubo_prueba.gd", "res://Scenes/piso.gd"]
+selected_script="res://Scenes/cubo_prueba.gd"
+open_help=["Area3D", "Node", "PrismMesh"]
 script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
