--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scenes/main.tscn")
 current_scene="res://Scenes/main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -43,9 +43,9 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://car.gd", "res://Scenes/cubo_prueba.gd", "res://Scenes/piso.gd"]
+open_scripts=["res://Scenes/area_3d.gd", "res://car.gd", "res://Scenes/checkpoint.gd", "res://Scenes/cubo_prueba.gd", "res://Scenes/piso.gd"]
 selected_script="res://Scenes/cubo_prueba.gd"
-open_help=["Area3D", "Node", "PrismMesh"]
+open_help=["Area3D", "BoxShape3D", "Node", "PrismMesh"]
 script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
