--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/textures/BitForge_logo.jpg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://assets/", "res://assets/textures/", "res://assets/audio/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=269
-dock_hsplit_3=-269
+dock_hsplit_2=268
+dock_hsplit_3=-268
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn")
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/control.tscn")
 current_scene="res://Scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/area_3d.gd", "res://car.gd", "res://Scenes/checkpoint.gd", "res://Scenes/cubo_prueba.gd", "res://Scenes/piso.gd"]
-selected_script="res://Scenes/cubo_prueba.gd"
+open_scripts=["res://Scenes/area_3d.gd", "res://car.gd", "res://Scenes/checkpoint.gd", "res://control.gd", "res://Scenes/cubo_prueba.gd", "res://Scenes/piso.gd"]
+selected_script="res://Scenes/area_3d.gd"
 open_help=["Area3D", "BoxShape3D", "Node", "PrismMesh"]
 script_split_offset=150
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 23, 1366, 745)
+floating_window_rect=Rect2i(102, 28, 1162, 685)
 floating_window_screen=0
 
 [ShaderEditor]
